fixed overflow and flex for all sections

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,8 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap');
 
-html {
+html,
+body {
   font-family: 'Kalam', cursive;
+  overflow: auto;
   overflow-x: hidden;
 }
 
